# OpenCV_Basic_Templates

./: CMakeLists.txt
src/: CMakeLists.txt  convolve.cpp  convolve.h  cvmat.cpp  cvmat.h  main.cpp  showimg.cpp  showimg.h
